--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,8 +14,8 @@
              <div class="conteudo2"> 
                 <div class="caixa1"> <img class="caixa_img" src="/images/logo.png"> </img> </div>
                 <div class="caixa2">
-                    <div class="entrar">
-                       <b> Entrar </b>
+                    <div class="entrar" onclick="login.hbs">
+                        <a href="login"><b> Entrar </b> </a>
                     </div>
                 </div>
                 <div class="caixa3">
@@ -26,13 +26,13 @@
                 </div>
                 <div class="caixa5">
                     <div class="inscreva">
-                       <b> Inscreva-se </b>
+                        <a href="cadastro"><b> Inscreva-se </b> </a>
                     </div>
 
                 </div>
                 <div class="caixa6">
                     <div class="entrar">
-                       <b> Entrar </b>
+                        <a href="login"><b> Entrar </b> </a>
                     </div>
                 </div>
              </div>
